data/derived/comb/progs/unify/prog2481.ml.out
Characters 54-56:
  | 0 -> [];;
         ^^
Error: This expression has type 'a list
       but an expression was expected of type int
